correction align content

--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,24 @@
 body {
-    font-family: "Roboto Condensed", sans-serif;
-    position: relative;
-    left: 50%;
-    width: 980px;
-    margin-left: -490px;
+    width: 100%;
 }
 
-.heading {
+header {
+    text-align: center;
+}
+
+main,
+footer {
+    padding-left: 27%;
+    padding-right: 27%;
+}
+
+section {
+    padding-left: 35%;
+    padding-right: 35%;
+    text-align: center;
+}
+
+article {
     text-align: center;
 }
 
@@ -18,12 +30,9 @@ body {
     border-top-style: solid;
 }
 
-.poster {
-    text-align: center;
-}
-
 video {
     border-radius: 10px 10px 10px 10px;
+    width: 100%;
 }
 
 .link {
